--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*==== ROOT CONFIG ====*/
 :root {
-    --hue-color: 180;
+    --hue-color: 160;
     --brand: hsl(var(--hue-color), 100%, 26%);
     --brand-light: hsl(calc(var(--hue-color) - 22), 23%, 89%);
     --brand-light-02: hsl(calc(var(--hue-color) + 10), 14%, 97%);
@@ -75,7 +75,22 @@ a {
 }
 
 .nav-link:hover {
-    font-size: 2rem;
+    font-size: 1.75rem;
+}
+
+#schedule {
+    color: var(--white);
+    font-size: 1.5rem;
+    border: 2px solid var(--white);
+    padding: 0.5rem 0.85rem;
+    width: max-content;
+    border-radius: 100%;
+    transition: 0.3s;
+}
+
+#schedule:hover {
+    color: var(--brand);
+    background-color: var(--white);
 }
 
 /*==== MAIN ====*/
@@ -102,32 +117,33 @@ section {
     background-color: var(--brand-light);
 }
 
-.wrapper-home {
+.wrapper-section {
     display: flex;
     align-items: center;
 }
 
-.wrapper-home div {
+.wrapper-section div {
     width: 50%;
 }
 
-.home-informations {
+.section-informations {
     display: grid;
     gap: 1.5rem;
 }
 
-.home-title {
+.section-title {
     font-size: 0.875rem;
     color: var(--brand);
     font-weight: var(--bold);
+    align-self: flex-end;
 }
 
-.home-subtitle {
+.section-subtitle {
     font-size: 3rem;
     color: var(--gray-headline);
 }
 
-.home-text {
+.section-text {
     font-size: 1rem;
     color: var(--gray-paragraph);
 }
@@ -160,7 +176,7 @@ section {
     height: 100%;
 }
 
-.home-img {
+.section-img {
     width: 25rem;
 }
 
@@ -191,11 +207,91 @@ section {
     height: 2rem;
 }
 
-/*==== ABOUT ====*/
-
 /*==== SERVICES ====*/
+#services {
+    text-align: center;
+}
+
+#services-title {
+    align-self: flex-end;
+}
+
+#services-subtitle {
+    align-self: flex-start;
+    margin-top: 1rem;
+}
+
+.services-informations {
+    display: grid;
+    align-self: flex-start;
+    grid-template-columns: auto auto auto;
+    gap: 2rem;
+    text-align: left;
+    padding: 0 1rem;
+}
+
+.services-information {
+    background-color: white;
+    padding: 1.5rem;
+    text-align: left;
+    display: grid;
+    gap: 0.5rem;
+}
+
+.services-information-icon {
+    font-size: 1rem;
+    color: var(--brand);
+}
+
+/*==== ABOUT ====*/
+#about {
+    background-color: var(--brand-beige);
+}
+
+#wrapper-about {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+#about-informations {
+    order: 1;
+}
+
+.about-img {
+    width: 35rem;
+}
 
 /*==== PROFESSIONALS ====*/
+#professionals {
+    background-color: var(--brand-light);
+    text-align: center;
+}
+
+.professionals-informations {
+    display: flex;
+    gap: 1rem;
+    padding: 0 1rem;
+}
+
+.professionals-information {
+    background-color: var(--white);
+    height: max-content;
+    display: grid;
+    gap: 1rem;
+    text-align: left;
+}
+
+.professionals-information-text {
+    display: grid;
+    gap: 1rem;
+    padding: 2rem;
+}
+
+.professional-information-img {
+    width: 100%;
+}
 
 /*==== TESTIMONIAL ====*/
 
@@ -215,6 +311,24 @@ section {
 }
 
 /*RESPONSIVENESS*/
+@media screen and (max-width: 1600px) {
+    .about-img {
+        width: 30rem;
+    }
+}
+
+@media screen and (max-width: 1350px) {
+    .about-img {
+        width: 25rem;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .about-img {
+        width: 20rem;
+    }
+}
+
 @media screen and (max-width: 1100px) {
     .nav-container {
         display: flex;
@@ -240,11 +354,11 @@ section {
         width: 100vw;
     }
 
-    .home-subtitle {
+    .section-subtitle {
         font-size: 2rem;
     }
 
-    .home-img {
+    .section-img {
         width: 20rem;
     }
 }
@@ -261,11 +375,11 @@ section {
 
 /*Large Devices*/
 @media screen and (max-width: 1024px) {
-    .home-img {
-        width: 22.5rem;
+    .section-img {
+        width: 17.5rem;
     }
 
-    .home-subtitle {
+    .section-subtitle {
         font-size: 2rem;
     }
 
@@ -283,8 +397,12 @@ section {
         padding: 0 6.5rem;
     }
 
-    .home-subtitle {
+    .section-subtitle {
         font-size: 1.85rem;
+    }
+
+    .services-informations {
+        grid-template-columns: auto auto;
     }
 }
 
@@ -300,23 +418,58 @@ section {
         padding: 0 3.5rem;
     }
 
-    .home-img {
+    .section-img {
         width: 20rem;
     }
 }
 
 @media screen and (max-width: 712px) {
-    .home-subtitle {
+    .section-subtitle {
         font-size: 1.5rem;
     }
 
-    .home-img {
+    .section-img {
         width: 18.5rem;
+    }
+
+    #wrapper-about {
+        flex-direction: column;
+    }
+
+    #wrapper-about div {
+        width: 100%;
+    }
+
+    .about-img-div {
+        order: 1;
+        text-align: center;
+    }
+
+    .about-img {
+        width: 27.5rem;
+    }
+
+    .professionals-informations {
+        display: grid;
+    }
+
+    .professionals-information {
+        display: flex;
+        align-items: center;
+    }
+
+    .professional-information-img {
+        width: 20rem;
+        height: max-content;
+    }
+
+    .professionals-information-text {
+        padding: 0.5rem;
     }
 }
 
 @media screen and (max-width: 688px) {
-    .home-img {
+    .section-img {
         width: 15rem;
     }
 }
@@ -341,15 +494,15 @@ section {
 
     section {
         height: max-content;
-        padding-top: 2.5rem;
+        padding: 5rem 0 2.5rem 0;
     }
 
-    .wrapper-home {
+    .wrapper-section {
         display: grid;
         gap: 1.5rem;
     }
 
-    .wrapper-home div {
+    .wrapper-section div {
         width: 100%;
     }
 
@@ -358,15 +511,49 @@ section {
     }
 
     .home-stats {
+        display: grid;
+        height: max-content;
+        padding: 2.5rem 0;
+        justify-self: center;
+        gap: 3.5rem;
+        width: 70vw;
+        border-radius: 0.75rem;
+    }
+
+    .separator {
         display: none;
+    }
+
+    .services-informations {
+        margin-top: 2.5rem;
+        grid-template-columns: auto;
+    }
+
+    .professionals-informations {
+        margin-top: 2rem;
+    }
+
+    .professionals-information {
+        display: grid;
+    }
+
+    .professional-information-img {
+        width: 100%;
+    }
+
+    .professionals-information-text {
+        padding: 1.5rem;
     }
 }
 
 /*Small Devices*/
 @media screen and (max-width: 521px) {
-
-    .home-img {
+    .section-img {
         width: 18.5rem;
+    }
+
+    .about-img {
+        width: 20rem;
     }
 }
 
@@ -375,8 +562,12 @@ section {
         padding: 0 2rem;
     }
 
-    .home-img {
+    .section-img {
         width: 17.5rem;
+    }
+
+    .home-stats {
+        width: 90vw;
     }
 }
 
@@ -385,7 +576,11 @@ section {
         padding: 0 1rem;
     }
 
-    .home-img {
+    .section-img {
+        width: 15rem;
+    }
+
+    .about-img {
         width: 15rem;
     }
 }
